fixed tag wrap

--- a/src/styles/scss/utilities/_reset.scss
+++ b/src/styles/scss/utilities/_reset.scss
@@ -19,6 +19,8 @@ html {
   background: #f4f2ee;
   font-size: 10px;
   scroll-behavior: smooth;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 /* Sections
